session promo code changes
